[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/BuildButton.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.117647 )

[sub_resource type="StyleBoxEmpty" id=1]

[node name="BuildButton" type="MarginContainer"]
margin_right = 14.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="BoxItems" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 97.0
margin_bottom = 43.0
rect_min_size = Vector2( 90, 0 )

[node name="ButtonCover" type="Button" parent="."]
margin_right = 104.0
margin_bottom = 50.0
custom_styles/hover = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 1 )

[connection signal="pressed" from="ButtonCover" to="." method="_on_ButtonCover_pressed"]
